# kai

./: .gitignore  Cargo.toml
compiler/kai-lexer/: .gitignore  Cargo.toml
compiler/kai-lexer-macro/: Cargo.toml
compiler/kai-lexer/assets/: example.hgo
compiler/kai-lexer/benches/: lexer.rs
compiler/kai-lexer/src/: lexer.rs  lib.rs  macros.rs  prelude.rs  span.rs  token.rs
compiler/kai-lexer/src/lexer/: token_hint.rs
compiler/kai-lexer/src/lexer/tracker/: comment.rs  ident.rs  mod.rs  number.rs  rident.rs  string_char.rs
compiler/kai-lexer/src/token/: macros.rs  tokens.rs
compiler/kai-lexer/src/token/tokens/: comment.rs  ident.rs  illegal.rs
compiler/kai-lexer/src/token/tokens/literals/: boolean.rs  character.rs  mod.rs  numbers.rs  string.rs
compiler/kai-lexer/src/token/tokens/literals/numbers/: float.rs  int.rs  mod.rs
compiler/kai-lexer/src/token_stream/: error.rs  group.rs  leaf.rs  mod.rs  parse.rs  rcvec.rs  source_map.rs
compiler/kai-lexer/tests/: lexer.rs
compiler/kaic/: Cargo.toml
compiler/sora-lexer/: Cargo.toml
compiler/sora-lexer-macro/: Cargo.toml
compiler/sora-lexer-macro/src/: lib.rs
compiler/sora-lexer/benches/: lexer.rs
compiler/sora-lexer/src/: file_info.rs  lexer.rs  lib.rs  location.rs  marker.rs  prelude.rs  source_map.rs  span.rs  token.rs
compiler/sora-lexer/src/error/: mod.rs
compiler/sora-lexer/src/lexer/: token_hint.rs
compiler/sora-lexer/src/lexer/tracker/: mod.rs  rident.rs  string_char.rs
compiler/sora-lexer/src/token/: macros.rs  tokens.rs
compiler/sora-lexer/src/token/tokens/: comment.rs  ident.rs  illegal.rs
compiler/sora-lexer/src/token/tokens/literals/: boolean.rs  character.rs  string.rs
compiler/sora-lexer/src/token/tokens/literals/numbers/: float.rs  int.rs
compiler/sora-lexer/src/token_stream/: error.rs  file_info.rs  group.rs  leaf.rs  mod.rs  parse.rs  rcvec.rs  source_map.rs
compiler/sora-lexer/tests/: parser.rs
compiler/sorac/: Cargo.toml
